# voyager-ai

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
backend/agents/: activity_agent.py  base.py  destination_agent.py  flight_agent.py  hotel_agent.py  orchestrator.py  weather_agent.py
backend/apis/: activities.py  destinations.py  flights.py  hotels.py  weather.py
backend/llm/: anthropic.py  base.py  openai.py  router.py
backend/models/: destination.py  hotels.py  itinerary.py
docs/: architecture.md  figma-prompts.md
frontend/: README.md  index.html
frontend/src/app/: routes.ts
frontend/src/app/components/: HeroSection.tsx  HowItWorks.tsx  PopularDestinations.tsx  RecentTrips.tsx  YourTrips.tsx
frontend/src/app/components/auth/: PhotoCollage.tsx  SocialSignInButtons.tsx
frontend/src/app/components/common/: DestinationCard.tsx  LoadingSkeleton.tsx  OfflineIndicator.tsx
frontend/src/app/pages/: Explore.tsx  ExportPreview.tsx  Itinerary.tsx  LandingPage.tsx  MyTrips.tsx  NotFound.tsx  Profile.tsx  SignIn.tsx  SignUp.tsx  TripPlanning.tsx  TripResearch.tsx
frontend/src/lib/: tokens.json
frontend/src/styles/: theme.css
travel_agent/: config.py
travel_agent/agents/: activity_agent.py  base.py  destination_agent.py  flight_agent.py  hotel_agent.py  orchestrator.py  weather_agent.py
travel_agent/apis/: activities.py  destinations.py  flights.py  hotels.py  weather.py
travel_agent/llm/: anthropic.py  openai.py  router.py
travel_agent/models/: activities.py  flights.py  itinerary.py  trip.py  weather.py
(+34 files in other folders)
