[project]
name = "voyager-ai"
version = "0.1.0"
description = "An agentic AI travel planning system"
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "amadeus>=9.0",
    "tripadvisorapi>=0.1",
    "pyowm>=3.3",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
pdf = ["fpdf2>=2.8"]

[project.scripts]
voyager = "main:app"
